Simplification des variables d'environnement et des mots de passe pour éviter les problèmes de connexion

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,15 @@
 # Configuration de la base de données
 MYSQL_DATABASE=wordpress
 MYSQL_USER=wpuser
-MYSQL_PASSWORD=motdepassefort
-MYSQL_ROOT_PASSWORD=rootpassword
+MYSQL_PASSWORD=password123
+MYSQL_ROOT_PASSWORD=rootpass123
 
 # Configuration WordPress
 WORDPRESS_DB_HOST=db:3306
 WORDPRESS_DB_NAME=wordpress
-WORDPRESS_DB_USER=wpuser
-WORDPRESS_DB_PASSWORD=motdepassefort
+# Les paramètres suivants ne sont plus nécessaires car ils utilisent MYSQL_USER et MYSQL_PASSWORD
+# WORDPRESS_DB_USER=wpuser
+# WORDPRESS_DB_PASSWORD=motdepassefort
 
 # Configuration des ports
 WP_PORT=7899
