--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: mariadb:latest
+    image: mysql:5.7
     restart: always
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
@@ -9,6 +9,7 @@ services:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     volumes:
       - db_data:/var/lib/mysql
+    command: --default-authentication-plugin=mysql_native_password
 
   wordpress:
     image: wordpress:latest
